edited quarto document

--- a/stat319.qmd
+++ b/stat319.qmd
@@ -1,25 +1,197 @@
 ---
 title: "Wine and Obesity Data Analysis"
-author: "Adrian T."
-date: "`r Sys.Date()`"
+author: "Adrian T. and Olivia K."
+date: "December 9, 2025"
 format:
+  pdf: 
+    code-blocks: false
   html:
     toc: true
     toc-location: left
     code-fold: true
     theme: cosmo
 ---
+```{python, echo=False}
+#| echo: false
+from ucimlrepo import fetch_ucirepo 
+import pandas as pd
+from scipy import stats
+import numpy as np
+import matplotlib.pyplot as plt
+from statsmodels.graphics.factorplots import interaction_plot
+import statsmodels.api as sm
+import statsmodels.formula.api as smf
+
+# Fetch the Wine Quality dataset
+wine_quality = fetch_ucirepo(id=186)
+
+# Features and targets as pandas DataFrames
+X = wine_quality.data.features
+y = wine_quality.data.targets
+
+def plot_histogram_q1():
+    data = X["density"].values
+
+    sample_size = 50
+    num_samples = 5000
+
+    sample_means = []
+
+    for i in range(num_samples):
+        sample = np.random.choice(data, size=sample_size, replace=True)
+        sample_means.append(np.mean(sample))
+
+    plt.hist(sample_means, bins=30, edgecolor='black')
+    plt.xlabel("Sample Mean of Density")
+    plt.title("Sampling Distribution of Sample Mean (Density)")
+    plt.show()
+
+def bootstrap():
+    #wine_quality = fetch_ucirepo(id=186)
+    X = wine_quality.data.features
+    df = X['pH'].values
+
+    iter = 10000
+    runs = np.zeros(iter)
+
+    for i in range(iter):
+        sample = np.random.choice(df, size=len(df), replace=True)
+        runs[i] = np.mean(sample)
+    return runs
+
+def plot_bootstrap(runs):
+    plt.hist(x = runs, bins = 'auto', alpha = 0.7)
+    plt.xlabel('Mean of ph')
+    plt.ylabel('Frequency')
+    plt.title('Bootstrap Distribution of Mean ph')
+    plt.show()
+
+def bootstrap_qq(vals):
+    stats.probplot(vals, dist="norm", plot=plt)
+    plt.title("QQ Plot for Bootstrap Means of pH")
+    plt.show()
+
+def mult_comparisons():
+    # fetch dataset 
+    estimation_of_obesity_levels_based_on_eating_habits_and_physical_condition = fetch_ucirepo(id=544) 
+    
+    # data (as pandas dataframes) 
+    X = estimation_of_obesity_levels_based_on_eating_habits_and_physical_condition.data.features 
+    y = estimation_of_obesity_levels_based_on_eating_habits_and_physical_condition.data.targets 
+    
+    # metadata 
+    #print(estimation_of_obesity_levels_based_on_eating_habits_and_physical_condition.metadata) 
+    
+    # variable information 
+    #print(estimation_of_obesity_levels_based_on_eating_habits_and_physical_condition.variables) 
+
+    df = pd.concat([X, y], axis=1)
+    df.columns = list(X.columns) + list(y.columns)
+
+    df['MTRANS_str'] = df['MTRANS'].astype(str)
+    df['CAEC_str'] = df['CAEC'].astype(str)
+
+
+    # 3️. Interaction plot
+    plt.figure(figsize=(12,8))
+    interaction_plot(df['MTRANS'], df['CAEC'], df['Weight'],
+                     colors=['red','blue','green','orange'], markers=['o','s','^','D'], ms=8)
+    plt.xlabel('MTRANS')
+    plt.ylabel('Weight(kg)')
+    plt.title('Interaction Plot: Weight by MTRANS and CAEC')
+    plt.show()
+
+    model = smf.ols("Weight ~ C(MTRANS) + C(CAEC)", data=df).fit()
+    #anova_table = sm.stats.anova_lm(model, typ=2)
+    #print(anova_table)
+    return model
+
+def plot_resid_fitted(model):
+    residuals = model.resid
+    fitted = model.fittedvalues
+    # Create plots
+    fig, ax = plt.subplots(1, 2, figsize=(12,5))
+
+    # 1. Q-Q plot of residuals
+    sm.qqplot(residuals, line='s', ax=ax[0])
+    ax[0].set_title('Q-Q Plot of Residuals')
+
+    # 2. Residuals vs Fitted plot
+    ax[1].scatter(fitted, residuals)
+    ax[1].axhline(0, color='red', linestyle='--')
+    ax[1].set_xlabel('Fitted values')
+    ax[1].set_ylabel('Residuals')
+    ax[1].set_title('Residuals vs Fitted')
+
+    plt.tight_layout()
+    plt.show()
+
+def hypothesis_test(model):
+    anova_table = sm.stats.anova_lm(model, typ=2)
+    # 4. Hypothesis test for equality of means
+    # Calculate MSA and MSB
+    msa = anova_table['sum_sq']['C(MTRANS)'] / anova_table['df']['C(MTRANS)']
+    msb = anova_table['sum_sq']['C(CAEC)'] / anova_table['df']['C(CAEC)']
+    mse = anova_table['sum_sq']['Residual'] / anova_table['df']['Residual']
+
+    # Calculate F-statistics
+    f_stat_a = msa / mse
+    f_stat_b = msb / mse
+    print(f"F-statistic for MTRANS: {f_stat_a}")
+    print(f"F-statistic for CAEC: {f_stat_b}")
+
+    # Critical F-value
+    alpha = 0.05
+    f_crit_a = stats.f.ppf(1 - alpha, anova_table['df']['C(MTRANS)'], anova_table['df']['Residual'])
+    f_crit_b = stats.f.ppf(1 - alpha, anova_table['df']['C(CAEC)'], anova_table['df']['Residual'])
+    print(f"Critical F-value for MTRANS: {f_crit_a}")
+    print(f"Critical F-value for CAEC: {f_crit_b}")
+
+    # p-values
+    p_value_a = 1 - stats.f.cdf(f_stat_a, anova_table['df']['C(MTRANS)'], anova_table['df']['Residual'])
+    p_value_b = 1 - stats.f.cdf(f_stat_b, anova_table['df']['C(CAEC)'], anova_table['df']['Residual'])
+    print(f"P-value for MTRANS: {p_value_a}")   
+    print(f"P-value for CAEC: {p_value_b}")
+
+    # Conclusion
+    if f_stat_a > f_crit_a:
+        print("Reject null hypothesis for MTRANS: At least one group mean is different.")
+    else:
+        print("Fail to reject null hypothesis for MTRANS: No significant difference between group means.") 
+    if f_stat_b > f_crit_b:
+        print("Reject null hypothesis for CAEC: At least one group mean is different.")
+    else:
+        print("Fail to reject null hypothesis for CAEC: No significant difference between group means.")
+
+```
 
 # 1. Dataset Overview
 
 ## Wine Quality Dataset
-- Collected in 2009, reporting physiochemical properties for red and white Portuguese "Vinho Verde" wines.  
-- 6497 rows, 11 columns: `fixed_acidity`, `volatile_acidity`, `citric_acid`, `residual_sugar`, `chlorides`, `free_sulfur_dioxide`, `total_sulfur_dioxide`, `density`, `ph`, `sulphates`, `alcohol`, `quality`, `color`.  
-- Observational study; each wine sample measured independently.  
+
+- **Collection Year:** 2009  
+- **Description:** Physiochemical properties for red and white Portuguese "Vinho Verde" wines.  
+- **Size:** 6497 rows, 12 columns  
+- **Variables:** `fixed_acidity`, `volatile_acidity`, `citric_acid`, `residual_sugar`, `chlorides`, `free_sulfur_dioxide`, `total_sulfur_dioxide`, `density`, `ph`, `sulphates`, `alcohol`, `quality`, `color`  
+- **Study Type:** Observational; each wine sample measured independently.
+
+## Sampling Distribution of Density
+
+The following histogram shows the bootstrap sampling distribution of the **sample mean of the `density` variable**.
+
+```{python}
+#| echo: false
+plot_histogram_q1()
+```
+
 
 ## Obesity Dataset
-- Factors: `MTRANS` (transportation method), `CAEC` (calories/food consumption behavior).  
-- Response variable: `Weight` (or obesity level score).  
+
+- **Collection Year:** 2019  
+- **Description:** Estimation of obesity levels in individuals from Mexico, Peru, and Colombia, based on eating habits and physical condition.  
+- **Size:** 2111 rows, 16 columns  
+- **Variables:** `Gender`, `Age`, `Height`, `Weight`, `Family_history_with_overweight`, `FAVC`, `FCVC`, `NCP`, `CAEC`, `SMOKE`, `CH20`, `SCC`, `FAF`, `TUE`, `CALC`, `MTRANS`, `NObeyesdad`  
+- **Study Type:** Observational; each individual measured independently.
 
 ---
 
@@ -41,21 +213,53 @@ format:
 
 ---
 
-# 3. Bootstrap Confidence Interval: Wine pH
-- 95% confidence interval for wine pH: (3.215, 3.222).  
-- QQ plot indicates approximate normality.  
+# 3. Bootstrap Approach: Wine pH
+
+## Bootstrap Distribution
+```{python}
+#| echo: false
+vals = bootstrap()
+plot_bootstrap(vals)
+```
+## QQ Plot for Bootstrap
+```{python}
+#| echo: false
+bootstrap_qq(vals)
+```
+## 95% Bootstrap Confidence Interval
+```{python, echo=False}
+#| echo: false
+# Run the bootstrap and compute CI
+#vals = bootstrap()
+lower = np.percentile(vals, 2.5)
+upper = np.percentile(vals, 97.5)
+(lower, upper)
+```
 
 **Conclusion:** We are 95% confident that the true population mean pH lies between 3.215 and 3.222.  
 
 ---
 
-# 4. Analysis of Variance (Obesity Dataset)
 
+# 4. Analysis of Variance (Wine Dataset)
+
+---
+
+# 5. Multiple Comparisons (Obesity Dataset)
 ### ANOVA Model and Assumptions
-- Two-way ANOVA with interaction: `Weight ~ MTRANS * CAEC`.  
-- **Residual Analysis:**  
+- Two-way ANOVA with interaction: `Weight ~ MTRANS * CAEC`.
+```{python}
+#| echo: false
+model = mult_comparisons()
+```
+
+- **QQ Plot and Residual Analysis:**  
+```{python}
+#| echo: false
+plot_resid_fitted(model)
+```
   - QQ plot shows approximate normality.  
-  - Residual plot shows no clear pattern (homoscedasticity).  
+  - Residual plot shows no clear pattern.  
 - **Conclusion:** ANOVA assumptions satisfied (normality, independence, equal variance).  
 
 ### F-Tests for Factors
@@ -69,27 +273,8 @@ format:
 
 ---
 
-# 5. Multiple Comparisons
-- Tukey HSD pairwise tests show:  
-  - MTRANS: at least one pair of transportation methods differs significantly.  
-  - CAEC: multiple dietary behavior levels show highly significant differences.  
 
----
 
-# 6. Interaction Plot
-The interaction plot indicates **non-additive effects**, supporting the inclusion of the interaction term in the ANOVA model.  
-
----
-
-# 7. Summary
-1. Wine alcohol content does not significantly exceed 10.5% (t-test).  
-2. Wine pH bootstrap CI confirms approximate normality.  
-3. Obesity dataset ANOVA shows both MTRANS and CAEC significantly affect Weight.  
-4. Residual and QQ plots satisfy model assumptions.  
-5. Multiple comparisons reveal which specific factor levels differ.  
-6. Interaction plot confirms non-additive effects.  
-
----
 
 # References
 - [UCI Wine Quality Dataset](https://archive.ics.uci.edu/dataset/186/wine+quality)  
